data/derived/fa15/progs/unify/prog0066.ml.out
Characters 53-54:
  let fixpoint (f,b) = wwhile ((fun x -> (f, b = f b)),b);;
                                                       ^
Error: This expression has type 'a but an expression was expected of type
         'a -> 'a
       The type variable 'a occurs inside 'a -> 'a
